# CSerialPort

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  How To Use.txt  LICENSE  README-CN.md  README-EN.md  README.md  README_zh_CN.md  SerialPort.cpp  SerialPort.h  VERSION  appveyor.yml  codeformat.sh  cserialport-config.cmake  cserialport-config.cmake.in  cserialport.cppcheck  flake.nix  suspending.txt  xmake.lua
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: -------.md  bug--.md  bug_report.md
.github/workflows/: build.yml
Demo/: directory_comment.txt
Demo/CSerialPortDemoWin32/: CSerialPortDemoWin32.sln
Demo/Comm/: directory_comment.txt
Demo/CommNoGui/: CMakeLists.txt  CSerialPortDemoNoGui.cpp  Makefile  compile-MSVC.bat  compile-MinGW.bat  compile.sh
bindings/c/: CMakeLists.txt  README.md  cserialport.cpp  cserialport.h  xmake.lua
bindings/c/example/: CMakeLists.txt  main.c  main_sync_native.c
bindings/csharp/: CMakeLists.txt  README.md  cserialport.i
bindings/csharp/example/: CMakeLists.txt  Program.cs
bindings/java/: CMakeLists.txt  README.md  cserialport.i
bindings/java/example/: CommJava.java
bindings/javascript/: CMakeLists.txt  README.md  binding.gyp  binding.gyp.bak  compile.bat  compile.sh  cserialport.i  index.js
bindings/javascript/example/: index.js
bindings/nodejs/: CMakeLists.txt  CSerialPortWrapper.cpp  CSerialPortWrapper.h  README.md  addon.cpp  binding.gyp.bak  index.js  package.json
bindings/nodejs/node-addon-api/: package.json
bindings/python/: CMakeLists.txt  README.md  cserialport.i
bindings/python/example/: main.py
bindings/rust/: CMakeLists.txt  Cargo.toml  README.md  bindings.rs
bindings/rust/example/: Cargo.toml
bindings/rust/example/src/: main.rs
cmake/: cserialport_src.cmake  toolchain_aarch64.cmake  toolchain_aarch64_win32.cmake  toolchain_arm.cmake  toolchain_arm_win32.cmake  toolchain_mingw64_linux.cmake  toolchain_mips64el.cmake  toolchain_riscv64.cmake
doc/: CMakeLists.txt  CSerialPort_doc_cn.chm  CSerialPort_doc_en.chm  Doxyfile.in  FAQ.md  How To Use.txt  common_problems.md  directory_comment.txt  directory_list.md  error_guide.md  suspending.txt
examples/: CMakeLists.txt  xmake.lua
examples/CommAndroid/: .gitignore  settings.gradle
examples/CommAndroid/app/: build.gradle
examples/CommAndroid/app/src/main/: AndroidManifest.xml
examples/CommAndroid/app/src/main/cpp/: CMakeLists.txt  cserialport.i
examples/CommAndroid/app/src/main/java/com/itas109/cserialport/: MainActivity.java
examples/CommAndroid/app/src/main/res/layout/: activity_main.xml
examples/CommAndroid/app/src/main/res/values/: strings.xml  themes.xml
examples/CommAndroid/app/src/main/res/values-night/: themes.xml
examples/CommAndroid/gradle/wrapper/: gradle-wrapper.properties
examples/CommDLL/: directory_comment.txt
examples/CommDLL/Comm/: Comm.vcxproj  Comm.vcxproj.filters  CommDlg.cpp  CommDlg.h  ReadMe.txt  resource.h  stdafx.cpp
examples/CommElectron/: CMakeLists.txt  README.md  index.js  package.json  preload.js
examples/CommElectron/public/: index.html
examples/CommMFC/: BUILD.md  CMakeLists.txt  CommMFC.cpp  CommMFC.h  CommMFC.rc  CommMFC.sln  CommMFC.vcproj  CommMFCDlg.cpp  CommMFCDlg.h  ReadMe.txt  Resource.h  stdafx.cpp  targetver.h
examples/CommMFC/Comm/: Comm.h  Comm.vcxproj  Comm.vcxproj.filters  CommDlg.h
examples/CommMFC/res/: CommMFC.rc2
examples/CommMFCDLL/: CMakeLists.txt  CommMFCDLL.cpp  CommMFCDLL.h  CommMFCDLL.rc  CommMFCDLL.sln  CommMFCDLL.vcproj  CommMFCDLLDlg.cpp  CommMFCDLLDlg.h  ReadMe.txt  Resource.h  directory_comment.txt  stdafx.cpp  stdafx.h
examples/CommMFCDLL/res/: CommMFCDLL.rc2
examples/CommNoGui/: CMakeLists.txt  CSerialPortDemoNoGui.cpp  Makefile  compile-Clang.bat  compile-MSVC.bat  compile-MinGW.bat  compile-MinGW32.bat  compile.sh  directory_comment.txt  xmake.lua
examples/CommNoGuiProtocol/: CMakeLists.txt  CommNoGuiProtocol.cpp  README.md  xmake.lua
examples/CommNoGuiTimeout/: CMakeLists.txt  CSerialPortDemoNoGuiTimeout.cpp  itimer.hpp
examples/CommQT/: CMakeLists.txt  CommQT.pro  commqt.pri  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/CommTui/: CSerialPortDemoTui.cpp  compile-MinGW.bat  compile.sh
examples/CommWXWidgets/: CMakeLists.txt  CommWXWidgets.cbp  CommWXWidgetsApp.cpp  CommWXWidgetsApp.h  CommWXWidgetsMain.cpp  CommWXWidgetsMain.h  command.txt
examples/CommWXWidgets/wxsmith/: CommWXWidgetsdialog.wxs
examples/CommWeb/: CMakeLists.txt  README.md  index.js  package.json
examples/CommWeb/public/: index.html
examples/CommWebServer/: CMakeLists.txt  Makefile  README.md  index.html  main.cpp
examples/CommWebview/: CMakeLists.txt  README.md  index.html  main.cpp
include/: Doxyfile
lib/: CMakeLists.txt  directory_comment.txt  version.rc  xmake.lua
lib/Linux/: Makefile  compile.sh  directory_comment.txt
lib/Windows/: directory_comment.txt
lib/Windows/VC12/: directory_comment.txt
lib/Windows/VC12/libcserialport/libcserialport/: libcserialport.cpp  libcserialport.vcxproj  libcserialport.vcxproj.filters
pic/: directory_comment.txt
src/: .SerialPortUnixBase.cpp.un~  Doxyfile  SerialPort.cpp  SerialPort.h  SerialPortAsyncBase.cpp  SerialPortBase.cpp  SerialPortBase.h  SerialPortInfo.cpp  SerialPortInfo.h  SerialPortInfoBase.cpp  SerialPortInfoBase.h  SerialPortInfoUnixBase.cpp  SerialPortInfoUnixBase.h  SerialPortInfoWinBase.cpp  SerialPortInfoWinBase.h  SerialPortNativeSyncUnixBase.cpp  SerialPortNativeSyncWinBase.cpp  SerialPortUnixBase.cpp  SerialPortUnixBase.h  SerialPortWinBase.cpp  SerialPortWinBase.h  SerialPort_global.h  directory_comment.txt  osplatformutil.h  sigslot.h
test/: CMakeLists.txt  CSerialPortVirtual.cpp  CSerialPortVirtual.h  cseiralport_test.cpp  gtest.cmake  submodule.sh  testCase.md  unixVirtualSerialPort.py  xmake.lua
test/RingBufferTest/: CMakeLists.txt  main.cpp
test/benchmark/: CMakeLists.txt  CSerialPortBenchmark.cpp  README.md
test/gtest/: readme.txt
test/hotPlugTest/: CMakeLists.txt  CSerialPortHotPlugTest.cpp
test/lib/: readme.txt
(+83 files in other folders)
